--- a/AppsProvider.csproj
+++ b/AppsProvider.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{12BC926F-A38B-47DB-A490-21E8686514F6}</ProjectGuid>
+    <ProjectGuid>{12BC926F-8192-47DB-A490-21E8686514F6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PackageManagement</RootNamespace>
-    <AssemblyName>SampleProvider</AssemblyName>
+    <RootNamespace>PackageManagement.AppSyndication</RootNamespace>
+    <AssemblyName>AppSyndication</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <SolutionPropsPath Condition="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), solution.props)) != ''">$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), solution.props))\solution.props</SolutionPropsPath>
   </PropertyGroup>
@@ -16,7 +16,7 @@
 
   <PropertyGroup Condition="$(SolutionPropsPath) == '' OR !Exists($(SolutionPropsPath))">
     <!-- if this is built standalone, we don't need the solution.props file. -->
-    <SolutionDir Condition=" '$(SolutionDir)'=='' ">$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), PackageProvider.sln))\</SolutionDir>
+    <SolutionDir Condition=" '$(SolutionDir)'=='' ">$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), AppsProvider.sln))\</SolutionDir>
     <SolutionRootDir >$(SolutionDir)</SolutionRootDir>
 
     <!-- Defaults to .Net 4.0 -->
@@ -58,7 +58,7 @@
       <DependentUpon>Messages.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PackageProvider.cs" />
+    <Compile Include="AppsProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Messages.resx">
